# fde

./: Cargo.toml  README.md
.github/workflows/: general.yaml
benches/: elgamal-plot.txt  elgamal.rs  elgamalkzg.rs  elgamalkzg_multi.rs  kzg-elgamal-bench-results  kzg-paillier-bench-results  kzg_elgamal.rs  kzg_elgamal_slow.rs  kzg_paillier.rs  ourPlots.ipynb  paillier-plot.txt  plots.py  range_proof.rs
contracts/: BN254.sol  Constants.sol  FDE.sol  FDEPaillier.sol  FDX.sol  Types.sol
examples/: protocol.rs
src/: adaptor_sig.rs  ark_schnorr.rs  danksharding.rs  dleq.rs  encrypt.rs  hash.rs  interpolate.rs  lib.rs  range_proof.rs
src/backend/: elgamalkzg.rs  elgamalkzg_multi.rs  kzg.rs  kzg_elgamal.rs  kzg_elgamal_slow.rs  kzg_paillier.rs  mod.rs
src/commit/: kzg.rs
src/common/: mod.rs
src/encrypt/: elgamal.rs  mod.rs  split_scalar.rs
src/encrypt/elgamal/: mod.rs  split_scalar.rs  utils.rs
src/range_proof/: commitment.rs  mod.rs  poly.rs  utils.rs
src/tests/: mod.rs
src/veck/: kzg_elgamal.rs  kzg_paillier.rs  mod.rs  server.rs
src/veck/kzg/: mod.rs
src/veck/kzg/elgamal/: encryption.rs  mod.rs
src/veck/kzg/paillier/: encrypt.rs  mod.rs  random.rs  server.rs  utils.rs
tests/bls/: dleq.rs  elgamal.rs  elgamalkzg.rs  elgamalkzg_multi.rs  main.rs  split_scalar.rs
